--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
     -->
     <title>ThomasJRye</title>
   </head>
-  <body>
+  <body scroll="no" style="overflow: hidden">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
