--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>ThomasJRye</title>
   </head>
-  <body scroll="no" style="overflow: hidden">
+  <body style="overflow: hidden">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
